Fix: 修复构建和Vercel部署配置问题
- 修复SWC依赖问题，添加@next/swc-win32-x64-msvc
- 优化vercel.json配置，移除regions，增加maxDuration
- 添加engines配置确保Node.js版本兼容性
- 优化Next.js配置，添加实验性特性优化
- 创建.vercelignore文件优化部署
- 添加详细的Vercel部署故障排除指南

--- a/vercel.json
+++ b/vercel.json
@@ -5,17 +5,12 @@
     "tinyimgtool.com",
     "www.tinyimgtool.com"
   ],
-  "regions": [
-    "hkg1",
-    "nrt1",
-    "sfo1"
-  ],
   "github": {
     "silent": true
   },
   "functions": {
     "app/**": {
-      "maxDuration": 10
+      "maxDuration": 30
     }
   },
   "headers": [
@@ -56,5 +51,7 @@
       "destination": "/",
       "permanent": true
     }
-  ]
+  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next"
 }
