--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   },
   "homepage": "https://tinyimgtool.com",
   "private": true,
+  "engines": {
+    "node": ">=18.17.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -29,6 +33,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@next/swc-win32-x64-msvc": "^15.3.4",
     "autoprefixer": "^10.4.16",
     "browser-image-compression": "^2.0.2",
     "file-saver": "^2.0.5",
@@ -48,7 +53,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^15.3.4",
     "typescript": "^5"
   }
 }
