--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "专业图片压缩工具 - 智能图片优化器",
-  "short_name": "图片压缩工具",
-  "description": "专业图片压缩和格式转换工具，支持精确大小控制",
+  "name": "Professional Image Compressor - Smart Image Optimizer",
+  "short_name": "CompressLab",
+  "description": "Professional image compression and format conversion tool with precise size control",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -9,16 +9,16 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
+      "src": "/logo.svg",
+      "sizes": "192x192 512x512",
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     },
     {
-      "src": "/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "src": "/favicon.svg",
+      "sizes": "32x32 16x16",
+      "type": "image/svg+xml",
+      "purpose": "any"
     }
   ],
   "categories": [
@@ -26,18 +26,5 @@
     "productivity",
     "photo"
   ],
-  "screenshots": [
-    {
-      "src": "/screenshot-wide.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide"
-    },
-    {
-      "src": "/screenshot-narrow.png",
-      "sizes": "750x1334",
-      "type": "image/png",
-      "form_factor": "narrow"
-    }
-  ]
+  "lang": "en"
 }
