feat: CompressLab V2.0 with strict precision compression and format expansion

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "professional-image-compressor",
   "version": "1.0.0",
-  "description": "专业图片压缩工具 - 基于Next.js 14的智能图片压缩和格式转换工具",
+  "description": "Professional Image Compressor - Smart image compression and format conversion tool built with Next.js 14",
   "author": "Your Name",
   "license": "MIT",
   "keywords": [
