--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Professional Image Compressor - Smart Image Optimizer",
+  "name": "CompressLab - Smart Image Optimizer",
   "short_name": "CompressLab",
   "description": "Professional image compression and format conversion tool with precise size control",
   "start_url": "/",
